<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <build>
        <plugins>
            <plugin>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <groupId>org.springframework.boot</groupId>
            </plugin>
        </plugins>
    </build>
    <description>out of box spring cloud api gateway for eureka</description>
    <groupId>com.github.rainmanhhh</groupId>
    <artifactId>eureka-gateway</artifactId>
    <modelVersion>4.0.0</modelVersion>
    <name>eureka-gateway</name>
    <parent>
        <artifactId>spring-boot-starter-parent</artifactId>
        <groupId>org.springframework.boot</groupId>
        <relativePath />
        <version>2.1.9.RELEASE</version> <!-- lookup parent from repository -->
    </parent>

    <dependencies>
        <dependency>
            <artifactId>jsr305</artifactId>
            <groupId>com.google.code.findbugs</groupId>
            <scope>provided</scope>
            <version>3.0.2</version>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-actuator</artifactId>
            <groupId>org.springframework.boot</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-cloud-starter-gateway</artifactId>
            <groupId>org.springframework.cloud</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
            <groupId>org.springframework.cloud</groupId>
        </dependency>
        <dependency>
            <artifactId>spring-boot-configuration-processor</artifactId>
            <groupId>org.springframework.boot</groupId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <artifactId>spring-boot-starter-test</artifactId>
            <groupId>org.springframework.boot</groupId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <java.version>8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <artifactId>spring-cloud-dependencies</artifactId>
                <groupId>org.springframework.cloud</groupId>
                <scope>import</scope>
                <type>pom</type>
                <version>${spring-cloud.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <version>0.0.1-SNAPSHOT</version>

</project>
